[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buildbot_renovation"
version = "0.0.0"
authors = [
  { name="Richard Brežák", email="richard@brezak.sk" },
]
description = "A Buildbot plugin integrating with Renovate"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "AGPL-3.0-or-later"
license-files.globs = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/numtide/org"
Issues = "https://github.com/numtide/org/issues"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true
exclude = ["tests/*"]
